Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -4,5 +4,5 @@ files:
       - /*_stable/
       - /cmi/Settings.apk/
     translation: /cmi/**/values-%two_letters_code%/%original_file_name%
-  - source: /venus/Settings.apk/res/values/**.xml
+  - source: /venus/Settings.apk/res/values/*.xml
     translation: /cmi/Settings.apk/res/values-%two_letters_code%/%original_file_name%
