--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,8 +1,5 @@
 files:
-  - source: /cmi/**/values/*.xml
+  - source: /venus/**/values/*.xml
     ignore:
       - /*_stable/
-      - /cmi/Settings.apk/
-    translation: /cmi/**/values-%two_letters_code%/%original_file_name%
-  - source: /venus/Settings.apk/res/values/*.xml
-    translation: /cmi/Settings.apk/res/values-%two_letters_code%/%original_file_name%
+    translation: /venus/**/values-%two_letters_code%/%original_file_name%
