--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,5 @@
 files:
-  - source: /venus/**/values/*.xml
+  - source: /star/**/values/*.xml
     ignore:
       - /*_stable/
-    translation: /venus/**/values-%two_letters_code%/%original_file_name%
+    translation: /star/**/values-%two_letters_code%/%original_file_name%
